--- a/public/gen/model/_edit.html
+++ b/public/gen/model/_edit.html
@@ -1,13 +1,53 @@
-<form role="form">
 
-    <div class="form-group">
-        <label>Text Input</label>
-        <input class="form-control">
-        <p class="help-block">Example block-level help text here.</p>
-    </div>
 
+<form role="form" method='POST' enctype="multipart/form-data" ng-submit="save($event);"><!--action='<%= _model.hjs_uri %>/{{ <%= _model.name %>._id }}'-->
+    <% for(var name in _model.fields){  %>
+    <% if(_model.fields[name].type == 'boolean'){ %>
     <div class="form-group">
-        <label>Text Input with Placeholder</label>
-        <input class="form-control" placeholder="Enter text">
+        <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+                <label for="<%= name %>">
+                    <input name="<%= name %>" type="checkbox"  id="<%= name %>" ng-model="<%= _model.name %>.<%= name %>" />
+                </label>
+            </div>
+        </div>
     </div>
+    <% }else if(_model.fields[name].type == 'md'){ %>
+    <textarea id="<%= name %>" name="<%= name %>" class="form-control" rows="3"  ng-model="<%= _model.name %>.<%= name %>">}</textarea>
+    <% }else if(_model.fields[name].type == 's3-asset'){ %>
+    <div class="form-group">
+        <label for="<%= name %>"><%= name %></label>
+        <input type="file" class="form-control" id="<%= name %>" name="<%= name %>" placeholder="Enter <%= name %>">
+    </div>
+    <% }else if(_model.fields[name].type == 'ref'){ %>
+    {{^ <%= _model.fields[name].ref %> }}
+    <div class="form-group">
+        <label for="<%= name %>"><%= name %></label>
+        <select id="<%= name %>" name='<%= name %>' ng-model="<%= _model.name %>.<%= name %>">
+        </select>
+    </div>
+    {{/ <%= _model.fields[name].ref %> }}
+    <% }else if(_model.fields[name].type == 'tpcd'){ %>
+    <hr>
+    <div class="form-group">
+        <h4><%= _model.fields[name].label || name %></h4>
+        <% for(var value in _model.fields[name].options){ %>
+        <div class="radio">
+            <label>
+                <input type="radio" name="<%= name %>" id="<%= name %>_<%= value %>"  ng-model="<%= _model.name %>.<%= name %>">
+                <%= _model.fields[name].options[value] %>
+            </label>
+        </div>
+        <% } %>
+    </div>
+    <% }else{ %>
+    <div class="form-group">
+        <label for="<%= name %>"><%= name %></label>
+        <input name="<%= name %>" type="<%= name %>" class="form-control" id="<%= name %>" placeholder="Enter <%= name %>" ng-model="<%= _model.name %>.<%= name %>">
+    </div>
+    <% } %>
+    <% } %>
+
+
+    <button type="submit" class="btn btn-default">Save</button>
 </form>
