--- a/public/gen/model/_edit.html
+++ b/public/gen/model/_edit.html
@@ -16,13 +16,13 @@
     <textarea id="<%= name %>" name="<%= name %>" class="form-control" rows="3"  ng-model="<%= _model.name %>.<%= name %>">}</textarea>
     <% }else if(_model.fields[name].type == 's3-asset'){ %>
     <div class="form-group">
-        <label for="<%= name %>"><%= name %></label>
-        <input type="file" class="form-control" id="<%= name %>" name="<%= name %>" placeholder="Enter <%= name %>">
+        <label for="<%= name %>"><%= _model.fields[name].displayName %></label>
+        <input type="file" class="form-control" id="<%= name %>" name="<%= name %>" placeholder="Enter <%= _model.fields[name].displayName %>">
     </div>
     <% }else if(_model.fields[name].type == 'ref'){ %>
     {{^ <%= _model.fields[name].ref %> }}
     <div class="form-group">
-        <label for="<%= name %>"><%= name %></label>
+        <label for="<%= name %>"><%= _model.fields[name].displayName %></label>
         <select id="<%= name %>" name='<%= name %>' ng-model="<%= _model.name %>.<%= name %>">
         </select>
     </div>
@@ -30,7 +30,7 @@
     <% }else if(_model.fields[name].type == 'tpcd'){ %>
     <hr>
     <div class="form-group">
-        <h4><%= _model.fields[name].label || name %></h4>
+        <h4><%=  _model.fields[name].displayName %></h4>
         <% for(var value in _model.fields[name].options){ %>
         <div class="radio">
             <label>
@@ -42,8 +42,8 @@
     </div>
     <% }else{ %>
     <div class="form-group">
-        <label for="<%= name %>"><%= name %></label>
-        <input name="<%= name %>" type="<%= name %>" class="form-control" id="<%= name %>" placeholder="Enter <%= name %>" ng-model="<%= _model.name %>.<%= name %>">
+        <label for="<%= name %>"><%= _model.fields[name].displayName %></label>
+        <input name="<%= name %>" type="<%= name %>" class="form-control" id="<%= name %>" placeholder="Enter <%= _model.fields[name].displayName %>" ng-model="<%= _model.name %>.<%= name %>">
     </div>
     <% } %>
     <% } %>
