--- a/public/gen/model/detail.html
+++ b/public/gen/model/detail.html
@@ -5,11 +5,7 @@
             <h1 class="page-header">
                 <%= _model.displayName %> <small></small>
             </h1>
-            <ol class="breadcrumb">
-                <li class="active">
-                    <i class="fa fa-dashboard"></i> <%= _model.displayName %>
-                </li>
-            </ol>
+            <njax-breadcrumbs breadcrumbs="breadcrumbs"></njax-breadcrumbs>
         </div>
     </div>
     <!-- /.row -->
