--- a/public/gen/model/detail.html
+++ b/public/gen/model/detail.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                <%= _model.displayName %> <small></small>
+                {{ <%= _model.name %>.name }} <small></small>
             </h1>
             <njax-breadcrumbs breadcrumbs="breadcrumbs"></njax-breadcrumbs>
         </div>
